# cosmos-cw20-token

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh
src/: contract.rs  state.rs
