[package]
name = "cw20-base"
version = "1.1.0"
authors = ["Devendra Chauhan"]
edition = "2021"
description = "Basic implementation of a Custom CosmWasm-20 compliant token"
license = "Apache-2.0"
 

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cw-utils = "1.0.1"
cw2 = "1.1.0"
cw20 = "1.1.0"
cw-storage-plus = "1.0.1"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = "0.16.1"
